# lib_circuits

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md
.github/workflows/: cpp.yml  rust.yml
circuit-gen-rs/: CMakeLists.txt  CMakePresets.json  Cargo.toml  build.rs  circuit_crop.odg
circuit-gen-rs/cpp/: CMakeLists.txt  circuit_lib.cpp  circuit_lib.h  utils_noncopyable.cpp
circuit-gen-rs/cpp/abc_wrapper/: README.md  abc_wrapper.cpp
circuit-gen-rs/cpp/drawable/: bbox.cpp  bbox.h  drawable.h  map_color_to_segid.h  points.h
circuit-gen-rs/cpp/segments2pixels/: CMakeLists.txt  segments2pixels.cpp  segments2pixels.h
circuit-gen-rs/cpp/utils/encode_rle/: encode_rle.h  rle.h
circuit-gen-rs/cpp/utils/files/: CMakeLists.txt
circuit-gen-rs/cpp/verilog/: verilog_compiler.cpp
circuit-gen-rs/data/aig/: define.v  xorexpand.aag  yosys_cmd
circuit-gen-rs/data/verilog/: AES_128.v  LFSR_comb.v  README.md  defines4tests.v  display-main.v  rndswitch.v  skcd.genlib  watermark.v  xorexpand.v
circuit-gen-rs/data/verilog/testbenchs/: tb-AES_128.sv  tb-BitCounter.sv
circuit-gen-rs/examples/: display_generate_and_evaluate.rs
circuit-gen-rs/src/: CMakeLists.txt  lib.rs  rust_wrapper.cpp  rust_wrapper.h
circuit-gen-rs/tests/: CMakeLists.txt  abc_test.cpp  cli_display_skcd.cpp  cli_generic_skcd.cpp  full_pipeline_test.cpp  full_pipeline_test.rs  segments2pixels_test.cpp
circuit-gen-rs/tests/data/: result_abc_full_adder.blif.blif  result_abc_full_adder_layers.blif.blif  result_abc_full_adder_with_comments.blif.blif  result_display_message_120x52_2digits.blif.blif  result_verilog_full_adder.blif  test_resources.h.in
circuit-gen-rs/tests/data/verilog/: test-lfsr-comb.v
circuit-types-rs/: Cargo.toml  README.md
circuit-types-rs/src/: blif_parser.rs  config.rs  gate.rs  gate_id_to_wire_ref.rs  lib.rs  metadata.rs  serialize_deserialize.rs
data/: resources.h.in
data/aig/: define.v  rndswitch.aag  yosys_cmd
data/blif/: compile_verilogs.sh  yosys_cmd  yosys_cmd_verilog_compiler_cpp
data/verilog/: CMakeLists.txt  LFSR_comb.v  display-main.v  message-display-segment2pixels.v  new-display-main.v  old_display-main.v  rndswitch.v  segment2pixels.v  xorexpand.v
src/: CMakeLists.txt  blif_parser.cpp  blif_parser.h  circuit_lib.cpp  circuit_lib.h  gate_types.h  my_random.h  skcd.cpp  skcd.h  utils_noncopyable.cpp  utils_noncopyable.h  visibility.h
src/abc_wrapper/: CMakeLists.txt  abc_wrapper.cpp  abc_wrapper.h
src/blif/: CMakeLists.txt  blif_parser.cpp  blif_parser.h  circuit_data.h  gate_types.h  my_random.h  skcd_config.h
src/drawable/: CMakeLists.txt  bbox.cpp  bbox.h  drawable.cpp  drawable.h  drawable_digit_png.cpp  drawable_digit_png.h  map_color_to_segid.cpp  points.cpp
src/segments2pixels/: CMakeLists.txt  segments2pixels.cpp  segments2pixels.h
src/skcd/: CMakeLists.txt  skcd.cpp  skcd.h
src/utils/encode_rle/: CMakeLists.txt  encode_rle.cpp  encode_rle.h  rle.h
src/utils/files/: CMakeLists.txt  utils_files.cpp  utils_files.h
src/verilog/: CMakeLists.txt  verilog_compiler.cpp  verilog_compiler.h
src/verilog_defines/: CMakeLists.txt  verilog_defines.cpp  verilog_defines.h
tests/: CMakeLists.txt  abc_test.cpp  cli_display_skcd.cpp  cli_generic_skcd.cpp  full_pipeline_test.cpp  hello_cli.cpp  hello_mockturtle_lorina.cpp  hello_skcd.cpp  segments2pixels_test.cpp  verilog_compiler_test.cpp
tests/data/: CMakeLists.txt  defines.v  result_abc_full_adder.blif.blif  result_adder.skcd
tests/data/display_120x52_2digits/: segments2pixels.v
