[package]
name = "circuit-gen-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { version = "1.0", default-features = false }
tikv-jemallocator = { version = "0.5", optional = true }
# nom = { version = "7", default-features = false, features = ["alloc"] }
# snafu = { version = "0.7", default-features = false }
# hashbrown = { version = "0.13.2", features = ["serde"] }
# # TODO(interstellar) serde: "alloc"?
# serde = { version = "1.0", default-features = false, features = ["derive"] }
# postcard = { version = "1", default-features = false, features = ["alloc"] }

circuit-types-rs = { path = "../circuit-types-rs", features = [
    "blif_parser",
], default-features = false }

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"

rust-cxx-cmake-bridge = { git = "https://github.com/Interstellar-Network/rust-cxx-cmake-bridge.git" }

[dev-dependencies]
tempfile = "3.6.0"
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }
clap = { version = "4", features = ["derive"] }

png-utils = { git = "https://github.com/Interstellar-Network/rs-common.git" }

[lib]
name = "lib_circuits_rs"
# DO NOT use staticlib; that prevents from using this crate from circuits_routes.rs etc
# crate-type = ["cdylib", "lib"]
crate-type = ["staticlib", "lib"]

[features]
default = ["std"]
std = ["cxx/std", "circuit-types-rs/std"]
alloc = ["cxx/alloc", "circuit-types-rs/alloc"]
panic = []
eval_plain = ["circuit-types-rs/eval_plain"]

[[example]]
name = "display_generate_and_evaluate"
required-features = ["eval_plain"]
