[package]
name = "circuit-types-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tikv-jemallocator = { version = "0.5", optional = true }
nom = { version = "7", default-features = false, features = [
    "alloc",
], optional = true }
snafu = { version = "0.7", default-features = false }
hashbrown = { version = "0.13.2", features = ["serde"] }
# TODO(interstellar) serde: "alloc"?
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
boolean_expression = { version = "0.4.4", optional = true }

[dev-dependencies]
tempfile = "3.6.0"
boolean_expression = "0.4.4"

[features]
default = ["std", "blif_parser"]
std = []
alloc = []
panic = []
blif_parser = ["nom"]
# Compile Circuit::eval_plain
# NOTE: will NOT work in no_std b/c of "boolean_expression"
# This is used only for tests/examples
eval_plain = ["boolean_expression"]
